# SAEGenRec

./: Makefile  README.md  pyproject.toml
.specify/memory/: constitution.md
configs/: default.yaml
configs/examples/: amazon2015_baby.yaml  amazon2015_beauty.yaml  amazon2023_beauty.yaml  amazon2023_fashion.yaml
configs/templates/: sft_prompts.yaml
docs/: mkdocs.yml
docs/docs/: api.md  configuration.md  data-pipeline.md  getting-started.md  index.md  modeling.md
reports/: 2026-03-03-sae-tokenizer-analysis.md
saegenrec/: __init__.py  dataset.py  features.py  plots.py
saegenrec/data/: config.py  pipeline.py  schemas.py
saegenrec/data/embeddings/: __init__.py  text.py
saegenrec/data/loaders/: __init__.py  amazon2015.py  amazon2023.py  base.py
saegenrec/data/processors/: augment.py  final.py  images.py  kcore.py  negative_sampling.py  sequence.py  split.py
saegenrec/data/tokenizers/: __init__.py  base.py  passthrough.py
saegenrec/modeling/: __init__.py  predict.py  train.py
saegenrec/modeling/decoding/: constrained.py  trie.py
saegenrec/modeling/genrec/: base.py  config.py
saegenrec/modeling/sft/: __init__.py  base.py  builder.py  callbacks.py  collator.py  config.py  dataset.py  evaluator.py  index2item.py  item2index.py  seqrec.py  trainer.py
saegenrec/modeling/tokenizers/: __init__.py  base.py  collision.py  rqkmeans.py  rqvae.py  sae.py
scripts/: run_pipeline.sh  run_sft_training.sh
specs/001-genrec-data-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-genrec-data-pipeline/checklists/: requirements.md
specs/002-refactor-data-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-embedding-module/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-embedding-module/contracts/: cli.md
specs/004-genrec-architecture/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-item-tokenizer-sae/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py
(+64 files in other folders)
